--- a/src/components/main/Index/Index.css
+++ b/src/components/main/Index/Index.css
@@ -1,11 +1,8 @@
-#index > div > * {
-  position: relative;
-}
-
 /* intro */
 
 #intro {
   user-select: none;
+  position: relative;
 }
 
 #logoTexture {
@@ -19,6 +16,21 @@
 #logoBig {
   height: 100vw;
   opacity: 0.3;
+  display: absolute;
+}
+
+/* parallax */
+
+.parallax-outer {
+  height: 100vh;
+  position: absolute;
+  z-index: 0;
+}
+
+.parallax-inner {
+  height: 100%;
+  display: flex;
+  align-items: center;
 }
 
 /* intro text */
@@ -26,6 +38,7 @@
 #logoText {
   width: 100vw;
   text-align: center;
+  margin: auto;
 }
 
 #logoText h1 {
@@ -44,6 +57,12 @@
   width: 100%;
   height: 100vh;
   background-color: #000;
+}
+
+/* continue arrow */
+
+#intro div:last-child {
+  position: relative;
 }
 
 /* about */
