Switched to Koa/Mongoose, and added member and project creation pages
(sorry for not splitting this into multiple commits, i'm lazy)

--- a/src/components/main/Projects/Projects.css
+++ b/src/components/main/Projects/Projects.css
@@ -265,21 +265,21 @@
 
 /* project member */
 
-#projectsResults .member {
+.project .member {
   margin-top: 15px;
   display: flex;
   align-items: center;
   height: 30px;
 }
 
-#projectsResults .memberImage {
+.project .memberImage {
   width: 30px;
   height: 30px;
   margin-right: 10px;
   clip-path: circle(50% at center);
 }
 
-#projectsResults .memberName {
+.project .memberName {
   color: var(--text);
 }
 
@@ -352,6 +352,7 @@
 
   #projectsResults > div {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
   }
 
