--- a/src/components/Root/Root.css
+++ b/src/components/Root/Root.css
@@ -41,6 +41,56 @@ body {
   background-color: var(--main);
 }
 
+/* ui elements */
+
+input[type="text"], input[type="password"] {
+  height: 40px;
+  outline: none;
+  border: none;
+  border-bottom: 2px solid var(--mid);
+  font-size: 16px;
+  font-family: 'poppinsRegular';
+  color: var(--text);
+  background-color: inherit;
+  transition: 0.3s;
+}
+
+input[type="text"]:hover, input[type="password"]:hover,
+input[type="text"]:focus, input[type="password"]:focus {
+  border-bottom: 2px solid var(--accent);
+  transition: 0.3s;
+}
+
+textarea {
+  resize: none;
+  font-size: 16px;
+  color: var(--text);
+  font-family: 'poppinsRegular';
+  width: 250px;
+  border: none;
+  border-radius: 0;
+  border: 2px solid transparent;
+  border-bottom: 2px solid var(--mid);
+  transition: 0.3s;
+  background-color: transparent;
+  outline: none;
+}
+
+textarea:hover, textarea:focus {
+  border: 2px solid var(--accent);
+  transition: 0.3s;
+}
+
+button {
+  border: none;
+  background-color: var(--accent);
+  padding: 7px 15px;
+  color: var(--main);
+  font-family: 'poppinsRegular';
+  font-size: 16px;
+  cursor: pointer;
+}
+
 /* desktop formatting */
 
 @media only screen and (min-width: 992px) {
