--- a/src/components/main/Members/Members.css
+++ b/src/components/main/Members/Members.css
@@ -1,6 +1,8 @@
 /* main */
+
 #members {
   margin: 50px 0 30px 0;
+  padding: 30px;
 }
 
 #members > div {
@@ -12,13 +14,13 @@
 /* member */
 
 #members .member {
-  width: calc(100% - 60px);
-  margin: 30px 30px 0 30px;
   display: flex;
   flex-direction: column;
-  align-items: center;
   background-color: var(--mid);
   font-family: 'poppinsRegular';
+  align-items: center;
+  margin-bottom: 30px;
+  width: 100%;
 }
 
 #members .memberImage {
@@ -29,35 +31,57 @@
   margin: 20px;
 }
 
+#members .memberInfo {
+  padding: 15px;
+  display: flex;
+  flex-direction: column;
+  width: calc(100% - 30px);
+}
+
+#members .completeMember {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
 #members .memberName {
   font-size: 22px;
   color: var(--text);
   margin-bottom: 10px;
+  text-align: center;
 }
 
 #members .memberDescription {
   color: var(--neutral);
-  width: calc(100% - 40px);
-  margin-bottom: 20px;
   line-height: 1.3;
+  flex-grow: 1;
+  margin-bottom: 15px;
+}
+
+#members .memberAccounts {
+  font-size: 14px;
+}
+
+#members .memberAccounts a {
+  margin-right: 10px;
+  color: var(--neutral);
 }
 
 /* desktop formatting */
 
 @media only screen and (min-width: 992px) {
+  /* member */
+
   #members .member {
-    height: 200px;
-    align-items: flex-start;
-    flex-wrap: wrap;
+    flex-direction: row;
+  }
+
+  #members .memberInfo {
+    height: 170px;
   }
 
   #members .memberName {
-    margin-top: 20px;
-  }
-
-  #members .memberDescription {
-    width: calc(100% - 240px);
-    height: calc(100% - 72px);
+    text-align: left;
   }
 }
 
@@ -65,7 +89,10 @@
 
 @media only screen and (min-width: 1500px) {
   #members .member {
-    width: calc(50% - 45px);
-    margin-right: 0px;
+    width: calc(50% - 15px);
+  }
+
+  #members .member:first-child {
+    margin-right: 30px;
   }
 }
